--- a/package.json
+++ b/package.json
@@ -16,8 +16,14 @@
   "author": "Programmer Blog",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^6.0.0",
+    "bcryptjs": "^3.0.2",
+    "cookie-parser": "^1.4.7",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
-    "mongoose": "^8.14.1"
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.14.1",
+    "validate": "^5.2.0",
+    "validator": "^13.15.15"
   }
 }
